--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -11,8 +11,10 @@ source = ./monitors.conf
 
 # The programs that I use
 $BROWSER = zen-browser
-$FILE_MANAGER = dolphin
+$FILE_MANAGER = pcmanfm
 $TERMINAL = kitty
+$MENU = rofi
+$LOCK = hyprlock
 
 #################
 ### AUTOSTART ###
@@ -26,7 +28,7 @@ source = ./autostart.conf
 ############################
 
 env = XCURSOR_SIZE,24
-env = HYPRCURSOR_SIZE,24
+# env = HYPRCURSOR_SIZE,24
 
 
 #####################
@@ -34,7 +36,7 @@ env = HYPRCURSOR_SIZE,24
 #####################
 
 source = ./themes/gruvbox.conf
-source = ./animations/disable.conf
+source = ./animations/enable.conf
 
 
 ##################################
