--- a/config/hypr/keybindings.conf
+++ b/config/hypr/keybindings.conf
@@ -1,7 +1,14 @@
 $mainMod = Mod4
 
-# Idk how to name it
+# Quit app and exit/lock Hyprland
 bind = $mainMod, Q, killactive,
+bind = $mainMod, M, exit,
+bind = $mainMod, L, $LOCK
+
+# Window bindings
+bind = $mainMod, F, fullscreen, 1
+bind = $mainMod SHIFT, F, fullscreen,
+bind = $mainMod, V, togglefloating,
 
 # Move focus
 bind = $mainMod, H, movefocus, l
@@ -13,15 +20,25 @@ bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
 
+# Move window
+bind = $mainMod SHIFT, H, movewindow, l
+bind = $mainMod SHIFT, L, movewindow, r
+bind = $mainMod SHIFT, J, movewindow, u
+bind = $mainMod SHIFT, K, movewindow, d
+bind = $mainMod SHIFT, left, movewindow, l
+bind = $mainMod SHIFT, right, movewindow, r
+bind = $mainMod SHIFT, up, movewindow, u
+bind = $mainMod SHIFT, down, movewindow, d
+
 # Resize active window
-bind = $mainMod SHIFT, H, resizeactive, 10 0
-bind = $mainMod SHIFT, L, resizeactive, -10 0
-bind = $mainMod SHIFT, J, resizeactive, 0 -10
-bind = $mainMod SHIFT, K, resizeactive, 0 10
-bind = $mainMod SHIFT, left, resizeactive, 10 0
-bind = $mainMod SHIFT, right, resizeactive, -10 0
-bind = $mainMod SHIFT, up, resizeactive, 0 -10
-bind = $mainMod SHIFT, down, resizeactive, 0 10
+bind = $mainMod ALT, H, resizeactive, 10 0
+bind = $mainMod ALT, L, resizeactive, -10 0
+bind = $mainMod ALT, J, resizeactive, 0 -10
+bind = $mainMod ALT, K, resizeactive, 0 10
+bind = $mainMod ALT, left, resizeactive, 10 0
+bind = $mainMod ALT, right, resizeactive, -10 0
+bind = $mainMod ALT, up, resizeactive, 0 -10
+bind = $mainMod ALT, down, resizeactive, 0 10
 
 # Switch workspaces
 bind = $mainMod, 1, workspace, 1
@@ -48,18 +65,35 @@ bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Launch apps
-bind = $mainMod, Return, exec, kitty
-bind = $mainMod, E, exec, dolphin
-bind = $mainMod, B, exec, zen-browser
+bind = $mainMod, Return, exec, $TERMINAL
+bind = $mainMod, E, exec, $FILE_MANAGER
+bind = $mainMod, B, exec, $BROWSER
 
 # Wayshot
-bind = $mainMod, P, exec, wayshot --slurp "$(slurp)" --stdout | wl-copy
+bind = $mainMod, P, exec, hyprshot -m region --clipboard-only
+bind = $mainMod SHIFT, P, exec, hyprshot -m output --clipboard-only
 
 # Rofi
-bind = $mainMod, Space, exec, wofi --show drun
+bind = $mainMod, R, exec, $MENU --show run
+bind = $mainMod, Space, exec, $MENU --show drun
+bind = $mainMod SHIFT, Space, exec, $MENU --show calc
 
 # Move/resize active window with mouse
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 bindm = $mainMod, Z, movewindow
 bindm = $mainMod, X, resizewindow
+
+# Laptop multimedia keys for volume and LCD brightness
+bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
+bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
+bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+
+bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
+
+# Requires playerctl
+bindl = , XF86AudioNext, exec, playerctl next
+bindl = , XF86AudioPause, exec, playerctl play-pause
+bindl = , XF86AudioPlay, exec, playerctl play-pause
+bindl = , XF86AudioPrev, exec, playerctl previous
