--- a/config/hypr/themes/gruvbox.conf
+++ b/config/hypr/themes/gruvbox.conf
@@ -1,6 +1,6 @@
 # Cursor theme
-env = HYPRCURSOR_THEME,Simp1e-Gruvbox-Dark
-env = HYPRCURSOR_SIZE,24
+# env = HYPRCURSOR_THEME,Simp1e-Gruvbox-Dark
+# env = HYPRCURSOR_SIZE,24
 
 general {
     gaps_in = 5
