fix: hyprlock keybinding error fix

--- a/config/hypr/keybindings.conf
+++ b/config/hypr/keybindings.conf
@@ -3,7 +3,7 @@ $mainMod = Mod4
 # Quit app and exit/lock Hyprland
 bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exit,
-bind = $mainMod, L, $LOCK
+bind = $mainMod, L, exec, hyprlock
 
 # Window bindings
 bind = $mainMod, F, fullscreen, 1
@@ -74,9 +74,9 @@ bind = $mainMod, P, exec, hyprshot -m region --clipboard-only
 bind = $mainMod SHIFT, P, exec, hyprshot -m output --clipboard-only
 
 # Rofi
-bind = $mainMod, R, exec, $MENU --show run
-bind = $mainMod, Space, exec, $MENU --show drun
-bind = $mainMod SHIFT, Space, exec, $MENU --show calc
+bind = $mainMod, R, exec, $MENU -show run
+bind = $mainMod, Space, exec, $MENU -show drun
+bind = $mainMod SHIFT, Space, exec, $MENU -show calc
 
 # Move/resize active window with mouse
 bindm = $mainMod, mouse:272, movewindow
